src/App.css
/* font-family: 'Lobster', cursive;
font-family: 'Open Sans', sans-serif;
font-family: 'Poppins', sans-serif;
font-family: 'Roboto', sans-serif;
font-family: 'Source Sans Pro', sans-serif;
font-family: 'Ubuntu', sans-serif; */

.App {
  display: flex;
  flex-direction: column;
  font-family: 'Poppins', sans-serif;
  position: relative;
  /* width: 100vw; */
}

/* Mobile NavBar */

.mobile-nav {
  position: absolute;
  z-index: 3;
  width: 100%;
  max-height: auto;
  background-color: rgb(31, 31, 31);
  padding-bottom: 2em;
  transition: max-height 2s ease;
}

.mobile-nav ul {
  list-style-type: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 1em;
  text-align: center;
}

.mobile-nav ul li {
  padding: .4em;
  width: 100%;
}

.mobile-nav ul li:hover {
  background-color: rgba(117, 117, 117, .3);
}

.mobile-nav ul li a {
  color: white;
  text-decoration: none;
}

.mobile-nav ul li a:hover {
  border-bottom: 1px solid white;
  opacity: .8;
}

.mobile-nav .close-btn {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  padding-right: 1em;
  color: white;
}

.mobile-nav .close-btn p {
  /* border: 1px solid white;
  border-radius: 20%; */
  cursor: pointer;
  padding: .5em;
}

.mobile-nav .close-btn p:hover {
  border-bottom: 1px solid white;
}

/* NavBar */

.nav {
  background-color: rgb(31, 31, 31);
  width: 100%;
  padding: 1em;
}

.nav ul #hamburger-btn {
  display: none;
  cursor: pointer;
}

.nav ul {
  max-width: 80%;
  list-style-type: none;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.nav li {
  margin: 0 1em;
}

.nav ul li a {
  color: white;
  text-decoration: none;
}

.nav ul li a:hover {
  border-bottom: 1px solid white;
  /* opacity: .8; */
}

.logout {
  border: none;
  color: white;
  background-color: transparent;
  font-family: 'Poppins', sans-serif;
  font-size: 1em;
  cursor: pointer;
}

.logout:hover {
  border-bottom: 1px solid white;
  opacity: .8;
}

/* Home */

.home-container {
  width: 70%;
  display: flex;
  margin: 0 auto;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding-bottom: 6em;
}

/* Card */

.blog-card {
  width: 70%;
  margin-top: 2em;
  min-height: auto;
  margin-bottom: 1.5em;
}

.card-container {
  display: flex;
  flex-direction: column;
  width: 60%;
  max-height: 450px;
  margin: 0 auto;
  border-radius: .5em;
  border: 1px solid rgba(77, 77, 77, .3);
  padding-bottom: 1em;
}

.card-container:hover {
  cursor: pointer;
  box-shadow: .5em .5em rgba(117, 117, 117, .3);
  /* margin-top: -.5em; */
}

.card-container__image {
    display: flex;
  align-items: center;
  justify-content: center;
}

.card-container__image img {
  width: 100%;
  max-height: 200px;
  object-fit: cover;
  border-radius: .5em .5em 0 0;
}

.card-container__content {
  font-family: 'Open Sans', sans-serif;
  padding: 1em 2em;
}

.card-container__content__title h1 {
  color: rgb(41, 39, 39);
}

.card-container__content__body {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: block;
  max-height: 5.5ch;
}

.card-container__content__body p {
  font-size: .85em;
  color: rgb(44, 44, 44);
  margin-top: 1em;
  /* max-height: 2.8em; */
  width: 100%;
}

.card-container__content__body p::-webkit-scrollbar {
  width: .3em;
} 

.card-container__content__body p::-webkit-scrollbar-track {
  background: #f1f1f1;
} 

.card-container__content__body p::-webkit-scrollbar-thumb {
  background: rgba(64, 64, 194, .6);
  border-radius: .5em;
} 

.card-container__content__footer p {
  font-size: .8em;
  opacity: .7;
  margin-top: 2em;
}

/* User Form */

.user-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 0 auto;
  width: 60%;
  margin-top: 2em;
  padding-bottom: 6em;
}

.form-container {
  display: flex;
  flex-direction: column;
  padding: 2em;
  width: 35%;
  border: 1px solid rgba(77, 77, 77, .3);
  border-radius: .5em;
  margin-top: 2em;
  border-top: .5em solid rgb(64, 64, 194);
  box-shadow: .5em .5em rgba(117, 117, 117, .3);
}

.form-container form {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.form-group {
  margin-top: 1em;
  width: 100%;
  display: flex;
  flex-direction: column;
}

.form-group label {
  opacity: .7;
}

.form-group .inputBox {
  height: 2em;
  padding: 1em;
  text-align: center;
  border: none;
  transition: border-color 1s;
  background-color: rgb(229, 228, 226);
  margin-top: 1em;
  border-radius: .2em .2em 0 0;
}

.form-group .inputBox:focus {
  outline: none;
  border-bottom: 2px solid;
  border-color: rgb(54, 54, 238);
}

.form-group input[type="submit"] {
  margin-left: auto;
  padding: 1em;
  cursor: pointer;
  margin-top: 1.5em;
  border: none;
  width: 30%;
  background-color: rgb(83, 83, 190);
  color: white;
  border-radius: .5em;
  width: auto;
}

.form-group input[type="submit"]:hover {
  background-color: rgb(53, 53, 209);
}

.form-footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 1.5em;
  font-size: .8em;
  opacity: .8;
}

.googleAuth-container {
  display: flex;
  flex-direction: column;
}

.googleAuth-container img {
  height: 32px;
}

.googleAuth-container button {
  padding: .5em 0;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px solid rgba(117, 117, 117, .3);
}

.googleAuth-container button:hover {
  background-color: rgba(239, 239, 239, 0.2);
}

/* Create Container */

.create-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0 auto;
  padding-top: 2em;
  width: 100%;
  margin-bottom: 4em;
}

.create-container h1 {
  opacity: .8;
}

.create-form-container {
  display: flex;
  width: 50%;
  padding: 1em 4em;
  margin: 1em auto;
}

.create-form-container form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 0 auto;
  width: 100%;
  box-shadow: .5em .5em rgba(117, 117, 117, .3);
  border: 1px solid rgba(117, 117, 117, .3);
  border-radius: .5em;
  padding: 2em 3em;
}

.create-form-container form input[type="text"] {
  height: 2em;
  padding: 1em;
  border: none;
  border-bottom: 1px solid black;
  margin: 1em 0 2em 0;
}

.create-form-container form input[type="text"]:focus {
  outline: none;
  border-bottom: 2px solid rgb(53, 53, 209);
}

.create-form-container form textarea {
  padding: 1em;
  margin: 1em 0 2em 0;
  resize: none;
}

.create-form-container form input[type="submit"] {
  padding: 1em;
  cursor: pointer;
  border-radius: .5em;
  border: none;
  background-color: rgb(64, 64, 194);
  color: white;
  width: auto;
}

.create-form-container form input[type="file"] {
  display: flex;
  width: 100%;
  margin: 1.5em 0;
}

/* User Messages */

.userMessage-container {
  padding: 1em 2em;
  color: white;
  border-radius: .5em;
  font-size: .6em;
}

.success {
  background-color: rgb(72, 234, 72);
}

.danger {
  background-color: rgb(237, 67, 67);
}

.active {
  border-bottom: 2px solid rgb(53, 53, 209);
}

/* Blog Post */
.blog-post__container {
  margin-top: 1em;
  display: flex;
  margin: 0 auto;
  width: 50%;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  margin-bottom: 4em;
  padding: 0 4em;
}

.blog-post__actions {
  margin-top: 2em;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  margin-left: auto;
}

.blog-post__content__title {
  margin-top: 1em;
}

.blog-post__content__author {
  opacity: .8;
}

.blog-post__content__image {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  margin-top: 4em;
}

.blog-post__content__image img {
  min-width: 100%;
  border-radius: 5px;
  max-height: 300px;
  object-fit: cover;
  object-position: top;
}

.blog-post__content__body {
  margin-top: 1em;
}

.blog-post__content__body p {
  text-align: justify;
  white-space: pre-wrap;
  color: rgba(0, 0, 0, .8);
}

/* Media Queries */

@media only screen and (max-width: 1280px) {
  .home-container {
    width: 80%;
  }

  .blog-card {
    width: 70%;
  }

  .card-container {
    width: 80%;
  }

  .user-form {
    width: 65%;
  }

  .form-container {
    width: 50%;
  }

  .nav ul {
    max-width: 90%;
  }

  .create-container {
    width: 90%;
  }

  .create-form-container {
    width: 65%;
  }

  .create-form-container form {
    width: 100%;
  }

}

@media only screen and (max-width: 1024px) {

  .user-form {
    width: 90%;
  }

  .form-container {
    width: 45%;
  }

  .create-container {
    width: 90%;
  }

  .create-form-container {
    width: 80%;
  }

  .create-form-container form {
    width: 100%;
  }
}

@media only screen and (max-width: 769px) {
  .home-container {
    width: 90%;
  }

  .blog-card {
    width: 80%;
  }

  .card-container {
    width: 80%;
  }

  .user-form {
    width: 90%;
  }

  .form-container {
    width: 55%;
  }

  .nav ul {
    max-width: 100%;
  }

  .create-container {
    width: 100%;
  }

  .create-form-container {
    width: 100%;
  }

  .create-form-container form {
    width: 100%;
  }
}

@media only screen and (max-width: 480px) {
  .home-container {
    width: 100%;
  }

  .blog-card {
    width: 90%;
  }

  .card-container {
    width: 90%;
  }

  .user-form {
    width: 90%;
  }

  .form-container {
    width: 95%;
  }

  .nav ul #hamburger-btn {
    display: block;
  }

  .nav ul li {
    display: none;
  }

  .create-container {
    width: 100%;
  }

  .create-form-container {
    width: 100%;
    padding: 0 1em;
  }

  .create-form-container form {
    width: 100%;
    padding: 1.5em;
  }

}

